added updated html pages

--- a/Contact.html
+++ b/Contact.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Contact</title>
     <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/nav.css">
     <meta name="viewport" content="width=device-width, initial scale=1.0">
 </head>
+
 <body class="body">
     <nav class="nav-bar">
 
-        
+
         <a href="Homepage.html">Home</a>
         <a href="About Us.html">About</a>
         <a href="Concerts.html">Concerts</a>
         <a href="Albums.html">Albums</a>
         <a href="Contact.html">Contact</a>
-        
+
 
     </nav>
-    <div class="contact-header">
-
-        <h1>Contact Us</h1>
-
-    </div>
 
     <form class="contact-form" action="contact.php" method="post">
         <div class="contact-form-element">
@@ -61,12 +59,16 @@
                 <option value="Mexico">Mexico</option>
             </select>
         </div>
-            <div class="radio">
-                Would you like to receive news about tours & events?<input type="checkbox">
-            </div>
-            <div class="submit-btn">
-                <button type="submit" name="submit" formtarget="_blank">Submit</button>
-            </div>
+        <div class="radio">
+            Would you like to receive news about tours & events?<input type="checkbox">
+        </div>
+        <div class="submit-btn">
+            <button type="submit" name="submit" formtarget="_blank">Submit</button>
+        </div>
     </form>
+
+    <script src="js/navbar.js"></script>
+
 </body>
+
 </html>
