Concerts page updated

--- a/About Us.html
+++ b/About Us.html
@@ -14,10 +14,10 @@
 
         <a href="Homepage.html">Home</a>
         <div class="dropdown">
-            <a id="aboutDropdown">About</a>
+            <a id="aboutDropdown" class="selected">About</a>
             <div class="dropdown-content">
-              <a href="#" id="historyMenu" class="history-menu">History</a>
-              <a href="#" id="membersMenu">Members</a>
+              <a href="About Us.html?historyid=jumpHistory">History</a>
+              <a href="About Us.html?membersid=jumpMembers">Members</a>
             </div>
         </div>
         <a href="Concerts.html">Concerts</a>
@@ -55,6 +55,9 @@
     </div>
 
     <script src="js/navbar.js"></script>
+    <script src="js/navbarcolor.js"></script>
+
+
     
 </body>
 
