--- a/Albums.html
+++ b/Albums.html
@@ -20,12 +20,12 @@
         <div class="dropdown">
             <a id="aboutDropdown">About</a>
             <div class="dropdown-content">
-              <a id="historyMenu">History</a>
-              <a id="membersMenu">Members</a>
+                <a href="About Us.html?historyid=jumpHistory">History</a>
+                <a href="About Us.html?membersid=jumpMembers">Members</a>
             </div>
         </div>
         <a href="Concerts.html">Concerts</a>
-        <a href="Albums.html">Albums</a>
+        <a href="Albums.html" class="selected">Albums</a>
         <a href="Contact.html">Contact</a>
 
     </nav>
@@ -73,6 +73,9 @@
     </div>
 
     <script src="js/navbar.js"></script>
+    <script src="js/navbarcolor.js"></script>
+
+
 
 </body>
 
