--- a/Homepage.html
+++ b/Homepage.html
@@ -13,8 +13,14 @@
     <img class="background-image" src="images/homepagebackground.jpg">
     <nav class="nav-bar">
 
-        <a href="Homepage.html">Home</a>
-        <a href="About Us.html">About</a>
+        <a href="Homepage.html" class="selected">Home</a>
+        <div class="dropdown">
+            <a id="aboutDropdown">About</a>
+            <div class="dropdown-content">
+                <a href="About Us.html?historyid=jumpHistory">History</a>
+                <a href="About Us.html?membersid=jumpMembers">Members</a>
+            </div>
+        </div>
         <a href="Concerts.html">Concerts</a>
         <a href="Albums.html">Albums</a>
         <a href="Contact.html">Contact</a>
