--- a/Concerts.html
+++ b/Concerts.html
@@ -5,6 +5,9 @@
     <title>Concerts</title>
     <link rel="stylesheet" href="css/concerts.css">
     <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta name="viewport" content="width=device-width, initial scale=1.0">
 </head>
 
@@ -13,8 +16,14 @@
 
 
         <a href="Homepage.html">Home</a>
-        <a href="About Us.html">About</a>
-        <a href="Concerts.html">Concerts</a>
+        <div class="dropdown">
+            <a id="aboutDropdown">About</a>
+            <div class="dropdown-content">
+                <a href="About Us.html?historyid=jumpHistory">History</a>
+                <a href="About Us.html?membersid=jumpMembers">Members</a>
+            </div>
+        </div>
+        <a href="Concerts.html" class="selected">Concerts</a>
         <a href="Albums.html">Albums</a>
         <a href="Contact.html">Contact</a>
 
@@ -22,169 +31,259 @@
     </nav>
 
     <table class="my-table">
+        <td class="date-and-time"><span id="dt"></span></td>
         <caption class="caption">Upcoming events</caption>
 
-        <tr class="table-header-row">
-            <th class="location">Location</th>
-            <th class="date">Date</th>
-        </tr>
+        <!-- <tr class="table-header-row">
+            <th class="location-header">Location</th>
+            <th class="date-header">Date</th>
+        </tr> -->
 
         <tr class="table-row">
+            <td class="remaining-days"></td>
             <td class="location">
                 Kiel, Germany <br />
                 Max Nachttheater
             </td>
-            <td class="date">12 Mar 2022</td>
+            <td class="date">2022-03-12</td>
+            <td class="days">
+                <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
+            </td>
         </tr>
         <tr class="table-row">
+            <td class="remaining-days"></td>
             <td class="location">Dresden, Germany <br />
                 Club Tante JU
             </td>
-            <td class="date">13 Mar 2022</td>
+            <td class="date">2022-03-13</td>
+            <td class="days">
+                <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
+            </td>
         </tr>
         <tr class="table-row">
+            <td class="remaining-days"></td>
             <td class="location">
                 Jena, Germany <br />
                 Kassablanca
             </td>
-            <td class="date">14 Mar 2022</td>
+            <td class="date">2022-03-14</td>
+            <td class="days">
+                <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
+            </td>
         </tr>
         <tr class="table-row">
+            <td class="remaining-days"></td>
             <td class="location">
                 Cologne, Germany <br />
                 E-Wek
             </td>
-            <td class="date">16 Mar 2022</td>
+            <td class="date">2022-03-16</td>
+            <td class="days">
+                <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
+            </td>
         </tr>
         <tr class="table-row">
+            <td class="remaining-days"></td>
             <td class="location">
                 Wurzburg, Germany <br />
                 Posthalle
             </td>
-            <td class="date">17 Mar 2022</td>
+            <td class="date">2022-03-17</td>
+            <td class="days">
+                <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
+            </td>
         </tr>
         <tr class="table-row">
+            <td class="remaining-days"></td>
             <td class="location">
                 Leipzig, Germany <br />
                 Taubchental
             </td>
-            <td class="date">18 Mar 2022</td>
+            <td class="date">2022-03-18</td>
+            <td class="days">
+                <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
+            </td>
         </tr>
         <tr class="table-row">
+            <td class="remaining-days"></td>
             <td class="location">
                 Hannover, Germany <br />
                 Capitol
             </td>
-            <td class="date">19 Mar 2022</td>
+            <td class="date">2022-03-19</td>
+            <td class="days">
+                <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
+            </td>
         </tr>
         <tr class="table-row">
+            <td class="remaining-days"></td>
             <td class="location">
                 Hamburg, Germany <br />
                 edel-optics.de Arena
             </td>
-            <td class="date">21 Mar 2022</td>
+            <td class="date">2022-03-19</td>
+            <td class="days">
+                <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
+            </td>
         </tr>
         <tr class="table-row">
+            <td class="remaining-days"></td>
             <td class="location">
                 Bremen, Germany <br />
                 Kulturzentrum Schlachtof
             </td>
-            <td class="date">22 Mar 2022</td>
+            <td class="date">2022-03-22</td>
+            <td class="days">
+                <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
+            </td>
         </tr>
         <tr class="table-row">
+            <td class="remaining-days"></td>
             <td class="location">
                 Osnabruck, Germany <br />
                 Rosenhof
             </td>
-            <td class="date">23 Mar 2022</td>
+            <td class="date">2022-03-23</td>
+            <td class="days">
+                <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
+            </td>
         </tr>
         <tr class="table-row">
+            <td class="remaining-days"></td>
             <td class="location">
                 Heidelberg, Germany <br />
                 halle02
             </td>
-            <td class="date">26 Mar 2022</td>
+            <td class="date">2022-03-26</td>
+            <td class="days">
+                <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
+            </td>
         </tr>
         <tr class="table-row">
+            <td class="remaining-days"></td>
             <td class="location">
                 Luxembourg, Luxembourg <br />
                 Den Atelier
             </td>
-            <td class="date">27 Mar 2022</td>
+            <td class="date">2022-03-27</td>
+            <td class="days">
+                <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
+            </td>
         </tr>
         <tr class="table-row">
+            <td class="remaining-days"></td>
             <td class="location">
                 Brussels, Belgium <br />
                 Ancienne Belgique, AB Box
             </td>
-            <td class="date">28 Mar 2022</td>
+            <td class="date">2022-03-28</td>
+            <td class="days">
+                <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
+            </td>
         </tr>
         <tr class="table-row">
+            <td class="remaining-days"></td>
             <td class="location">
                 Paris, France <br />
                 La Maroquinerie
             </td>
-            <td class="date">30 Mar 2022</td>
+            <td class="date">2022-03-30</td>
+            <td class="days">
+                <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
+            </td>
         </tr>
         <tr class="table-row">
+            <td class="remaining-days"></td>
             <td class="location">
                 Zurich, Switzerland <br />
                 X-TRA
             </td>
-            <td class="date">31 Mar 2022</td>
+            <td class="date">2022-03-31</td>
+            <td class="days">
+                <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
+            </td>
         </tr>
         <tr class="table-row">
+            <td class="remaining-days"></td>
             <td class="location">
                 Graz, Austria <br />
                 Orpheum
             </td>
-            <td class="date">1 Apr 2022</td>
+            <td class="date">2022-04-01</td>
+            <td class="days">
+                <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
+            </td>
         </tr>
         <tr class="table-row">
+            <td class="remaining-days"></td>
             <td class="location">
                 Viena, Austria <br />
                 Ottakringer Brauerei
             </td>
-            <td class="date">2 Apr 2022</td>
+            <td class="date">2022-04-02</td>
+            <td class="days">
+                <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
+            </td>
         </tr>
         <tr class="table-row">
+            <td class="remaining-days"></td>
             <td class="location">
                 Munich, Germany <br />
                 Neue Theaterfabrik
             </td>
-            <td class="date">4 Apr 2022</td>
+            <td class="date">2022-04-04</td>
+            <td class="days">
+                <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
+            </td>
         </tr>
         <tr class="table-row">
+            <td class="remaining-days"></td>
             <td class="location">
                 Stuttgart, Germany <br />
                 Wagenhallen
             </td>
-            <td class="date">5 Apr 2022</td>
+            <td class="date">2022-04-05</td>
+            <td class="days">
+                <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
+            </td>
         </tr>
         <tr class="table-row">
+            <td class="remaining-days"></td>
             <td class="location">
                 Frankfurt, Germany <br />
                 Zoom
             </td>
-            <td class="date">6 Apr 2022</td>
+            <td class="date">2022-04-06</td>
+            <td class="days">
+                <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
+            </td>
         </tr>
         <tr class="table-row">
+            <td class="remaining-days"></td>
             <td class="location">
                 Berlin, Germany <br />
                 Tempdorom
             </td>
-            <td class="date">7 Apr 2022</td>
+            <td class="date">2022-04-07</td>
+            <td class="days">
+                <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
+            </td>
         </tr>
         <tr class="table-row">
+            <td class="remaining-days"></td>
             <td class="location">
                 Lebach, Germany <br />
                 Pferderennbahn Lebach
             </td>
-            <td class="date">6 Sep 2022</td>
+            <td class="date">2022-09-06</td>
+            <td class="days">
+                <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
+            </td>
         </tr>
     </table>
 
-    <script src="js/navbar.js"></script>
+    <script src="../MightyOaks/js/navbar.js"></script>
+    <script src="js/concertstuff.js"></script>
 
 </body>
 
