--- a/Contact.html
+++ b/Contact.html
@@ -13,10 +13,16 @@
 
 
         <a href="Homepage.html">Home</a>
-        <a href="About Us.html">About</a>
+        <div class="dropdown">
+            <a id="aboutDropdown">About</a>
+            <div class="dropdown-content">
+                <a href="About Us.html?historyid=jumpHistory">History</a>
+                <a href="About Us.html?membersid=jumpMembers">Members</a>
+            </div>
+        </div>
         <a href="Concerts.html">Concerts</a>
         <a href="Albums.html">Albums</a>
-        <a href="Contact.html">Contact</a>
+        <a href="Contact.html" class="selected">Contact</a>
 
 
     </nav>
