--- a/Albums.html
+++ b/Albums.html
@@ -31,27 +31,159 @@
     </nav>
 
     <div class="albums">
-        <a href="https://music.youtube.com/playlist?list=OLAK5uy_m9TyWxhqzuJFNs-UEH-M08gmEArxRo3T0" target="_blank">
-            <p>Howl <img class="howl" src="images/howl.jpg"></p>
-        </a>
-        <a href="https://music.youtube.com/playlist?list=OLAK5uy_nwbe5ngb2Bx_2gZ7T5l3xhWkZOi1kRxVk" target="_blank">
-            <p>Dreamers <img class="dreamers" src="images/dreamers.jpg"></p>
-        </a>
-        <a href="https://music.youtube.com/playlist?list=OLAK5uy_k3JQ42gWrI8Ec3v7XgUqYB9HkWHxE4aH8" target="_blank">
-            <p>Storm EP <img class="storm" src="images/storm.jpg"></p>
-        </a>
-        <a href="https://music.youtube.com/playlist?list=OLAK5uy_lFZhp0Y0m2Zfna-8JJtux59nlfwtMl4Dw" target="_blank">
-            <p>Driftwood Seat EP <img class="driftwood" src="images/driftwood.jpg"></p>
-        </a>
-        <a href="https://music.youtube.com/playlist?list=OLAK5uy_lCh0YtD6dcv4_3QurFIOmCnx-PTDxQuxE" target="_blank">
-            <p>Tell me what you're thinking EP <img class="thinking" src="images/thinking.jpg"></p>
-        </a>
-        <a href="https://music.youtube.com/playlist?list=OLAK5uy_lVb7ApeN00RhzwKeYIg31F63jZ_aJ4Nag" target="_blank">
-            <p>All things go <img class="things" src="images/things.jpg"></p>
-        </a>
-        <a href="https://music.youtube.com/playlist?list=OLAK5uy_kHpGx9I-nQ9SgtKE2uf6a507PmZLtXpxQ" target="_blank">
-            <p>Mexico <img class="mexico" src="images/mexico.jpg"></p>
-        </a>
+        <div class="accordion">
+            <span class="howlTitle">Howl</span>
+            <img class="howl" src="images/howl.jpg">
+            <div class="dropdown-albums-content">
+                <span>Brother</span>
+                <span>Seven Days</span>
+                <span>Back To You</span>
+                <span>When I Dream, I see</span>
+                <span>Just One Day</span>
+                <span>Shells</span>
+                <span>You Saved My Soul</span>
+                <span>The Golden Road</span>
+                <span>Captain's Hill</span>
+                <span>Courtyard in Berlin</span>
+                <span>Horse</span>
+                <span>Howl</span>
+            </div>
+        </div>
+
+        <div class="accordion">
+            <a href="#">Howl
+                <img class="howl" src="images/howl.jpg">
+            </a>
+            <div class="dropdown-albums-content">
+                <p>Brother</p>
+                <p>Seven Days</p>
+                <p>Back To You</p>
+                <p>When I Dream, I see</p>
+                <p>Just One Day</p>
+                <p>Shells</p>
+                <p>You Saved My Soul</p>
+                <p>The Golden Road</p>
+                <p>Captain's Hill</p>
+                <p>Courtyard in Berlin</p>
+                <p>Horse</p>
+                <p>Howl</p>
+            </div>
+        </div>  
+
+        <!-- <p><a href="#" onclick="myFunction()" class="dropbtn">Dreamers
+                <img class="dreamers" src="images/dreamers.jpg">
+                <div id="myDropdown" class="dropdown-albums-content">
+                    <a href="#">Brother</a>
+                    <a href="#">Seven Days</a>
+                    <a href="#">Back To You</a>
+                    <a href="#">When I Dream, I see</a>
+                    <a href="#">Just One Day</a>
+                    <a href="#">Shells</a>
+                    <a href="#">You Saved My Soul</a>
+                    <a href="#">The Golden Road</a>
+                    <a href="#">Captain's Hill</a>
+                    <a href="#">Courtyard in Berlin</a>
+                    <a href="#">Horse</a>
+                    <a href="#">Howl</a>
+                </div>
+            </a>
+        </p>
+
+        <p><a href="#" onclick="myFunction()" class="dropbtn">Storm EP
+                <img class="storm" src="images/storm.jpg">
+                <div id="myDropdown" class="dropdown-albums-content">
+                    <a href="#">Brother</a>
+                    <a href="#">Seven Days</a>
+                    <a href="#">Back To You</a>
+                    <a href="#">When I Dream, I see</a>
+                    <a href="#">Just One Day</a>
+                    <a href="#">Shells</a>
+                    <a href="#">You Saved My Soul</a>
+                    <a href="#">The Golden Road</a>
+                    <a href="#">Captain's Hill</a>
+                    <a href="#">Courtyard in Berlin</a>
+                    <a href="#">Horse</a>
+                    <a href="#">Howl</a>
+                </div>
+            </a>
+        </p>
+
+        <p><a href="#" onclick="myFunction()" class="dropbtn">Driftwood Seat EP
+                <img class="driftwood" src="images/driftwood.jpg">
+                <div id="myDropdown" class="dropdown-albums-content">
+                    <a href="#">Brother</a>
+                    <a href="#">Seven Days</a>
+                    <a href="#">Back To You</a>
+                    <a href="#">When I Dream, I see</a>
+                    <a href="#">Just One Day</a>
+                    <a href="#">Shells</a>
+                    <a href="#">You Saved My Soul</a>
+                    <a href="#">The Golden Road</a>
+                    <a href="#">Captain's Hill</a>
+                    <a href="#">Courtyard in Berlin</a>
+                    <a href="#">Horse</a>
+                    <a href="#">Howl</a>
+                </div>
+            </a>
+        </p>
+
+        <p><a href="#" onclick="myFunction()" class="dropbtn">Tell Me What You're Thinking EP
+                <img class="thinking" src="images/thinking.jpg">
+                <div id="myDropdown" class="dropdown-albums-content">
+                    <a href="#">Brother</a>
+                    <a href="#">Seven Days</a>
+                    <a href="#">Back To You</a>
+                    <a href="#">When I Dream, I see</a>
+                    <a href="#">Just One Day</a>
+                    <a href="#">Shells</a>
+                    <a href="#">You Saved My Soul</a>
+                    <a href="#">The Golden Road</a>
+                    <a href="#">Captain's Hill</a>
+                    <a href="#">Courtyard in Berlin</a>
+                    <a href="#">Horse</a>
+                    <a href="#">Howl</a>
+                </div>
+            </a>
+        </p>
+
+        <p><a href="#" onclick="myFunction()" class="dropbtn">All Things Go
+                <img class="things" src="images/things.jpg">
+                <div id="myDropdown" class="dropdown-albums-content">
+                    <a href="#">Brother</a>
+                    <a href="#">Seven Days</a>
+                    <a href="#">Back To You</a>
+                    <a href="#">When I Dream, I see</a>
+                    <a href="#">Just One Day</a>
+                    <a href="#">Shells</a>
+                    <a href="#">You Saved My Soul</a>
+                    <a href="#">The Golden Road</a>
+                    <a href="#">Captain's Hill</a>
+                    <a href="#">Courtyard in Berlin</a>
+                    <a href="#">Horse</a>
+                    <a href="#">Howl</a>
+                </div>
+            </a>
+        </p>
+
+        <p><a href="#" onclick="myFunction()" class="dropbtn">Mexico
+                <img class="mexico" src="images/mexico.jpg">
+                <div id="myDropdown" class="dropdown-albums-content">
+                    <a href="#">Brother</a>
+                    <a href="#">Seven Days</a>
+                    <a href="#">Back To You</a>
+                    <a href="#">When I Dream, I see</a>
+                    <a href="#">Just One Day</a>
+                    <a href="#">Shells</a>
+                    <a href="#">You Saved My Soul</a>
+                    <a href="#">The Golden Road</a>
+                    <a href="#">Captain's Hill</a>
+                    <a href="#">Courtyard in Berlin</a>
+                    <a href="#">Horse</a>
+                    <a href="#">Howl</a>
+                </div>
+            </a>
+        </p> -->
+
     </div>
 
     <div class="wrapper">
@@ -74,6 +206,7 @@
 
     <script src="js/navbar.js"></script>
     <script src="js/navbarcolor.js"></script>
+    <script src="js/albums.js"></script>
 
 
 
