--- a/Albums.html
+++ b/Albums.html
@@ -51,138 +51,93 @@
         </div>
 
         <div class="accordion">
-            <a href="#">Howl
-                <img class="howl" src="images/howl.jpg">
-            </a>
+            <span class="howlTitle">Dreamers</span>
+            <img class="dreamers" src="images/dreamers.jpg">
             <div class="dropdown-albums-content">
-                <p>Brother</p>
-                <p>Seven Days</p>
-                <p>Back To You</p>
-                <p>When I Dream, I see</p>
-                <p>Just One Day</p>
-                <p>Shells</p>
-                <p>You Saved My Soul</p>
-                <p>The Golden Road</p>
-                <p>Captain's Hill</p>
-                <p>Courtyard in Berlin</p>
-                <p>Horse</p>
-                <p>Howl</p>
+                <span>All I Need</span>
+                <span>Be With You Alwas</span>
+                <span>Burn</span>
+                <span>Call Me A Friend</span>
+                <span>Don't Lie To Me</span>
+                <span>Dreamers</span>
+                <span>Dust</span>
+                <span>Higher Place</span>
+                <span>Look Inside</span>
+                <span>Never Look Back</span>
+                <span>Raise A Glass</span>
+                <span>The Great Unknown</span>
             </div>
-        </div>  
+        </div>
 
-        <!-- <p><a href="#" onclick="myFunction()" class="dropbtn">Dreamers
-                <img class="dreamers" src="images/dreamers.jpg">
-                <div id="myDropdown" class="dropdown-albums-content">
-                    <a href="#">Brother</a>
-                    <a href="#">Seven Days</a>
-                    <a href="#">Back To You</a>
-                    <a href="#">When I Dream, I see</a>
-                    <a href="#">Just One Day</a>
-                    <a href="#">Shells</a>
-                    <a href="#">You Saved My Soul</a>
-                    <a href="#">The Golden Road</a>
-                    <a href="#">Captain's Hill</a>
-                    <a href="#">Courtyard in Berlin</a>
-                    <a href="#">Horse</a>
-                    <a href="#">Howl</a>
-                </div>
-            </a>
-        </p>
+        <div class="accordion">
+            <span class="howlTitle">Storm EP</span>
+            <img class="storm" src="images/storm.jpg">
+            <div class="dropdown-albums-content">
+                <span>One Shot</span>
+                <span>Storm</span>
+                <span>These Days</span>
+                <span>The Dark</span>
+            </div>
+        </div>
 
-        <p><a href="#" onclick="myFunction()" class="dropbtn">Storm EP
-                <img class="storm" src="images/storm.jpg">
-                <div id="myDropdown" class="dropdown-albums-content">
-                    <a href="#">Brother</a>
-                    <a href="#">Seven Days</a>
-                    <a href="#">Back To You</a>
-                    <a href="#">When I Dream, I see</a>
-                    <a href="#">Just One Day</a>
-                    <a href="#">Shells</a>
-                    <a href="#">You Saved My Soul</a>
-                    <a href="#">The Golden Road</a>
-                    <a href="#">Captain's Hill</a>
-                    <a href="#">Courtyard in Berlin</a>
-                    <a href="#">Horse</a>
-                    <a href="#">Howl</a>
-                </div>
-            </a>
-        </p>
+        <div class="accordion">
+            <span class="howlTitle">Driftwood Seat</span>
+            <img class="driftwood" src="images/driftwood.jpg">
+            <div class="dropdown-albums-content">
+                <span>Driftwood Seat</span>
+                <span>Like An Eagle</span>
+                <span>So Low, So High</span>
+                <span>Rainier</span>
+            </div>
+        </div>
 
-        <p><a href="#" onclick="myFunction()" class="dropbtn">Driftwood Seat EP
-                <img class="driftwood" src="images/driftwood.jpg">
-                <div id="myDropdown" class="dropdown-albums-content">
-                    <a href="#">Brother</a>
-                    <a href="#">Seven Days</a>
-                    <a href="#">Back To You</a>
-                    <a href="#">When I Dream, I see</a>
-                    <a href="#">Just One Day</a>
-                    <a href="#">Shells</a>
-                    <a href="#">You Saved My Soul</a>
-                    <a href="#">The Golden Road</a>
-                    <a href="#">Captain's Hill</a>
-                    <a href="#">Courtyard in Berlin</a>
-                    <a href="#">Horse</a>
-                    <a href="#">Howl</a>
-                </div>
-            </a>
-        </p>
+        <div class="accordion">
+            <span class="howlTitle">Tell Me What You're Thinking</span>
+            <img class="thinking" src="images/thinking.jpg">
+            <div class="dropdown-albums-content">
+                <span>Tell Me What You're Thinking</span>
+                <span>Lost Again</span>
+                <span>Forget Tomorrow</span>
+                <span>All Things Go</span>
+            </div>
+        </div>
 
-        <p><a href="#" onclick="myFunction()" class="dropbtn">Tell Me What You're Thinking EP
-                <img class="thinking" src="images/thinking.jpg">
-                <div id="myDropdown" class="dropdown-albums-content">
-                    <a href="#">Brother</a>
-                    <a href="#">Seven Days</a>
-                    <a href="#">Back To You</a>
-                    <a href="#">When I Dream, I see</a>
-                    <a href="#">Just One Day</a>
-                    <a href="#">Shells</a>
-                    <a href="#">You Saved My Soul</a>
-                    <a href="#">The Golden Road</a>
-                    <a href="#">Captain's Hill</a>
-                    <a href="#">Courtyard in Berlin</a>
-                    <a href="#">Horse</a>
-                    <a href="#">Howl</a>
-                </div>
-            </a>
-        </p>
+        <div class="accordion">
+            <span class="howlTitle">All things go</span>
+            <img class="things" src="images/things.jpg">
+            <div class="dropdown-albums-content">
+                <span>All Things Go</span>
+                <span>I Need You Now</span>
+                <span>Tell Me What You're Thinking</span>
+                <span>Forget Tomorrow</span>
+                <span>Lost Again</span>
+                <span>Aileen</span>
+                <span>What You Got</span>
+                <span>Crazy</span>
+                <span>Fly To You</span>
+                <span>Light the World on Fire</span>
+                <span>Kids</span>
+            </div>
+        </div>
 
-        <p><a href="#" onclick="myFunction()" class="dropbtn">All Things Go
-                <img class="things" src="images/things.jpg">
-                <div id="myDropdown" class="dropdown-albums-content">
-                    <a href="#">Brother</a>
-                    <a href="#">Seven Days</a>
-                    <a href="#">Back To You</a>
-                    <a href="#">When I Dream, I see</a>
-                    <a href="#">Just One Day</a>
-                    <a href="#">Shells</a>
-                    <a href="#">You Saved My Soul</a>
-                    <a href="#">The Golden Road</a>
-                    <a href="#">Captain's Hill</a>
-                    <a href="#">Courtyard in Berlin</a>
-                    <a href="#">Horse</a>
-                    <a href="#">Howl</a>
-                </div>
-            </a>
-        </p>
-
-        <p><a href="#" onclick="myFunction()" class="dropbtn">Mexico
-                <img class="mexico" src="images/mexico.jpg">
-                <div id="myDropdown" class="dropdown-albums-content">
-                    <a href="#">Brother</a>
-                    <a href="#">Seven Days</a>
-                    <a href="#">Back To You</a>
-                    <a href="#">When I Dream, I see</a>
-                    <a href="#">Just One Day</a>
-                    <a href="#">Shells</a>
-                    <a href="#">You Saved My Soul</a>
-                    <a href="#">The Golden Road</a>
-                    <a href="#">Captain's Hill</a>
-                    <a href="#">Courtyard in Berlin</a>
-                    <a href="#">Horse</a>
-                    <a href="#">Howl</a>
-                </div>
-            </a>
-        </p> -->
+        <div class="accordion">
+            <span class="howlTitle">Mexico</span>
+            <img class="mexico" src="images/mexico.jpg">
+            <div class="dropdown-albums-content">
+                <span>Land of Broken Dreams</span>
+                <span>Mexico</span>
+                <span>Devil and the Deep Blue Sea</span>
+                <span>My Demons</span>
+                <span>Ghost</span>
+                <span>What You Fighting For</span>
+                <span>Bad Blood</span>
+                <span>By Your Side</span>
+                <span>Forever</span>
+                <span>Heavy</span>
+                <span>Gold To Me</span>
+                <span>Deadman's Island</span>
+            </div>
+        </div>
 
     </div>
 
