--- a/Albums.html
+++ b/Albums.html
@@ -27,6 +27,7 @@
         <a href="Concerts.html">Concerts</a>
         <a href="Albums.html" class="selected">Albums</a>
         <a href="Contact.html">Contact</a>
+        <a href="ConcertsForm.html">Create</a>
 
     </nav>
 
