--- a/Contact.html
+++ b/Contact.html
@@ -23,6 +23,7 @@
         <a href="Concerts.html">Concerts</a>
         <a href="Albums.html">Albums</a>
         <a href="Contact.html" class="selected">Contact</a>
+        <a href="ConcertsForm.html">Create</a>
 
 
     </nav>
