--- a/Client/ConcertsForm.html
+++ b/Client/ConcertsForm.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/concertsform.css">
 
-    <script src="../MightyOaks/js/navbar.js"></script>
-    <script src="js/concertsexpress.js"></script>
+    <script type="module" src="js/navbar.js"></script>
     <script type="module" src="js/create.js"></script>
 </head>
 
