db connection finished

--- a/Client/Concerts.html
+++ b/Client/Concerts.html
@@ -30,16 +30,16 @@
 
     </nav>
 
+    <div class="caption" id="events"></div>
+
     <table class="my-table">
-        <td class="date-and-time"><span id="dt"></span></td>
-        <caption class="caption">Upcoming events</caption>
 
         <!-- <tr class="table-header-row">
             <th class="location-header">Location</th>
             <th class="date-header">Date</th>
         </tr> -->
 
-        <tr class="table-row">
+        <!-- <tr class="table-row">
             <td class="remaining-days"></td>
             <td class="location">
                 Kiel, Germany <br />
@@ -49,8 +49,8 @@
             <td class="days">
                 <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
             </td>
-        </tr>
-        <tr class="table-row">
+        </tr> -->
+        <!-- <tr class="table-row">
             <td class="remaining-days"></td>
             <td class="location">Dresden, Germany <br />
                 Club Tante JU
@@ -278,12 +278,13 @@
             <td class="date">2022-09-06</td>
             <td class="days">
                 <button class="tickets"><i class="fas fa-ticket-alt"></i></button>
-            </td>
-        </tr>
+            </td> -->
+        <!-- </tr> -->
     </table>
 
-    <script src="../MightyOaks/js/navbar.js"></script>
-    <script src="js/concertstuff.js"></script>
+    <script type="module" src="js/navbar.js"></script>
+    <script type="module" src="js/concertstuff.js"></script>
+    <script type="module" src="js/createTable.js"></script>
 
 </body>
 
